--- a/css2/all.css
+++ b/css2/all.css
@@ -48,3 +48,9 @@ body{
     width: 200px;
     border-top: 3px solid #e7e7e7;
 }
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
